--- a/.gitignore
+++ b/.gitignore
@@ -442,3 +442,20 @@ StoreManagementAPI/obj/Debug/net6.0/StoreManagementAPI.GeneratedMSBuildEditorCon
 StoreManagementWebClient/obj/Debug/net6.0/StoreManagementWebClient.assets.cache
 StoreManagementWebClient/obj/Debug/net6.0/StoreManagementWebClient.csproj.AssemblyReference.cache
 StoreManagementWebClient/obj/Debug/net6.0/StoreManagementWebClient.GeneratedMSBuildEditorConfig.editorconfig
+Repositories/obj/Debug/net6.0/Repositories.csproj.AssemblyReference.cache
+Repositories/obj/Debug/net6.0/Repositories.assets.cache
+BusinessObjects/obj/Debug/net6.0/BusinessObjects.assets.cache
+BusinessObjects/obj/Debug/net6.0/BusinessObjects.csproj.AssemblyReference.cache
+BusinessObjects/obj/Debug/net6.0/BusinessObjects.GeneratedMSBuildEditorConfig.editorconfig
+DataAccess/obj/Debug/net6.0/DataAccess.assets.cache
+DataAccess/obj/Debug/net6.0/DataAccess.csproj.AssemblyReference.cache
+DataAccess/obj/Debug/net6.0/DataAccess.GeneratedMSBuildEditorConfig.editorconfig
+Repositories/obj/Debug/net6.0/Repositories.assets.cache
+Repositories/obj/Debug/net6.0/Repositories.csproj.AssemblyReference.cache
+Repositories/obj/Debug/net6.0/Repositories.GeneratedMSBuildEditorConfig.editorconfig
+StoreManagementAPI/obj/Debug/net6.0/StoreManagementAPI.assets.cache
+StoreManagementAPI/obj/Debug/net6.0/StoreManagementAPI.csproj.AssemblyReference.cache
+StoreManagementAPI/obj/Debug/net6.0/StoreManagementAPI.GeneratedMSBuildEditorConfig.editorconfig
+StoreManagementWebClient/obj/Debug/net6.0/StoreManagementWebClient.assets.cache
+StoreManagementWebClient/obj/Debug/net6.0/StoreManagementWebClient.csproj.AssemblyReference.cache
+StoreManagementWebClient/obj/Debug/net6.0/StoreManagementWebClient.GeneratedMSBuildEditorConfig.editorconfig
